Created New Fragments , Adapters , Dao , DatabaseModule and ViewModels

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="search">Search</string>
     <string name="cart">Cart</string>
     <string name="profile">Profile</string>
+    <string name="cash_on_delivery">Cash On Delivery</string>
+    <string name="online">Online Payment</string>
 </resources>
